--- a/po/translated/de/help.html
+++ b/po/translated/de/help.html
@@ -47,10 +47,10 @@ installieren. Benutzen Sie "ddm -p broadcom" um die Treiber von Ihrem System
 zu entfernen.</p>
 
 		<h3># ddm -i pae</h3>
-		<p>Dies wird den PAE Kernel für 32-bit Betriebssysteme auf
-Multi-Prozessor-Systemen installieren. Benutzen Sie "ddm -p pae" um den PAE
-Kernel von Ihrem System zu entfernen. Der Kernel kann nicht deinstalliert
-werden kann, während er in Benutzung ist.</p>
+		<p>Dies installiert den PAE Kernel für 32-bit Betriebssysteme auf
+Multi-Prozessor-Systemen. Benutzen Sie "ddm -p pae" um den PAE Kernel von
+Ihrem System zu entfernen. Der Kernel kann nicht deinstalliert werden,
+während er in Benutzung ist.</p>
 
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Dies wird die Reparatur einer Bumblebee-Installation versuchen.</p>
