--- a/po/translated/fr/help.html
+++ b/po/translated/fr/help.html
@@ -55,9 +55,9 @@ ce noyau si vous l'avez utilisé pour démarrer votre système et qu'il est en
 cours d'utilisation.</p>
 
 		<h3># ddm -i fixbumblebee</h3>
-		<p>This will try to fix a Bumblebee install.</p>
+		<p>Cela va tenter de réparer une installation par Bumblebee.</p>
 
-		<h2>Log</h2>
+		<h2>Journal</h2>
 		<h3>Fichier: /var/log/ddm.log</h3>
 		<p>Merci de joindre un fichier de log lorsque vous postez une demande sur notre
 forum: <a href="http://forums.solydxk.com"
