--- a/po/translated/pt_PT/help.html
+++ b/po/translated/pt_PT/help.html
@@ -17,7 +17,7 @@ listar quaisquer outros dispositivos mencionados acima.</p>
 
 		<h2>Importante</h2>
 		<p>O Gestor de Driver de Dispositivo só pode instalar drivers que estão
-disponíveis nos repositórios. Verifique se você tem uma conexão com a
+disponíveis nos repositórios. Verifique se você tem uma ligação com a
 internet, se você quiser instalar os drivers.</p>
 
 		<h2>Comandos</h2>
@@ -43,19 +43,19 @@ sistema.</p>
 abertos. Ela irá remover qualquer drivers proprietários de seu sistema.</p>
 
 		<h3># ddm -i broadcom</h3>
-		<p>Este comando irá instalar o driver correto para seu adaptador Broadcom
-wireless. Use "ddm -p broadcom" para remover os drivers do seu sistema.</p>
+		<p>Este comando irá instalar o driver correto para seu adaptador wireless
+Broadcom. Use "ddm -p broadcom" para remover os drivers do seu sistema.</p>
 
 		<h3># ddm -i pae</h3>
 		<p>Isto irá instalar o kernel PAE em sistemas com múltiplos processadores que
-executam um sistema operacional de 32-bit. Use "ddm -p pae" para remover o
-kernel PAE do seu sistema. Observe que você não pode remover o kernel quando
-você está atualmente inicializado nesse kernel.</p>
+executam um sistema operativo de 32-bit. Use "ddm -p pae" para remover o
+kernel PAE do seu sistema. Observe que você não pode remover o kernel,
+estando ele atualmente iniciado.</p>
 
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Isso irá tentar corrigir a instalação Bumblebee.</p>
 
-		<h2>Registro</h2>
+		<h2>Registo</h2>
 		<h3>Ficheiro: /var/log/ddm.log</h3>
 		<p>Por favor, anexar o ficheiro de registo quando você postar um problema no
 nosso fórum: <a href="http://forums.solydxk.com"
