Flat logo in background information pages

--- a/po/translated/ar/help.html
+++ b/po/translated/ar/help.html
@@ -8,11 +8,11 @@
 	<h1>مساعدة مدير تعريف الأجهزة</h1>
 	<div class="main">
 		<h2>الوصف</h2>
-		<p>The Device Driver Manager is a tool to help users installing third-party
-hardware drivers. Currently Nvidia, ATI and Broadcom drivers can be
-installed and allows to install the PAE kernel for multi-core 32-bit
-systems. The Device Driver Manager will only list those devices that are
-supported. It will not list any other devices then mentioned above.</p>
+		<p>مدير تعريف الأجهزة هو أداة لمساعدة المستخدمين على تثبيت تعريفات الأجهزة
+الخاصة بالمصنع. حاليا يسمح بتثبيت تعريفات ATI ،Nvidia وBroadcom كما يسمح
+بتثبيت النواة مع ملحق PAE للأنظمة متعددة الأنوية على معمارية 32 بت. يقوم
+مدير تعريف الأجهزة بعرض الأجهزة التي يدعمها فقط. لذا لن يدرج أيّة أجهزة أخرى
+غير المذكورة أعلاه.</p>
 
 		<h2>هام</h2>
 		<p>يمكن لمدير تعريف الأجهزة أن يثبت التعريفات المتوفرة بالمستودعات فقط. تأكد أن
