Fix --force-yes for Stretch

--- a/po/translated/ru/help.html
+++ b/po/translated/ru/help.html
@@ -5,14 +5,14 @@
   </head>
   <body>
     <div id="background"></div>
-	<h1>Менеджер Драйверов Устройств Помощь</h1>
+	<h1>Помощь по менеджеру драйверов</h1>
 	<div class="main">
 		<h2>Описание</h2>
-		<p>Менеджер Драйверов Устройств является инструментом, помогающий пользователям
-устанавливать сторонние драйверы оборудования. На данный момент возможна
-установка NVIDIA,  ATI и Broadcom драйверов, а так же установить pae-ядро
-для многоядерных 32-разрядных систем. В Менеджере Драйверов будет только
-список тех устройств, которые поддерживаются Вашим оборудованием. </p>
+		<p>Менеджер Драйверов Устройств является инструментом, помогающим пользователям
+устанавливать сторонние драйвера оборудования. На данный момент возможна
+установка NVIDIA,  ATI и Broadcom драйверов, а так же установка pae-ядра для
+многоядерных 32-разрядных систем. В Менеджере Драйверов будет только список
+тех устройств, которые поддерживаются Вашим оборудованием. </p>
 
 		<h2>Важный</h2>
 		<p>Менеджер Драйверов может установить драйвера, только которые доступны в
