--- a/po/translated/lt/help.html
+++ b/po/translated/lt/help.html
@@ -21,7 +21,7 @@ prieinamos saugyklose. Norėdami įdiegti tvarkykles, įsitikinkite, kad esate
 prisijungę prie interneto.</p>
 
 		<h2>Komandos</h2>
-		<p>Jeigu teikiate pirmenybę įdiegti tvarkytuves per terminalą, galite naudoti
+		<p>Jeigu teikiate pirmenybę įdiegti tvarkykles per terminalą, galite naudoti
 šias komandas:</p>
 
 		<p>&nbsp;</p>
@@ -44,7 +44,7 @@ tvarkyklių. Tai pašalins bet kokias nuosavybines tvarkykles iš jūsų
 sistemos.</p>
 
 		<h3># ddm -i broadcom</h3>
-		<p>Ši komanda, jūsų belaidžiam Broadcom adapteriui įdiegs tinkamas
+		<p>Ši komanda jūsų belaidžiam Broadcom adapteriui įdiegs tinkamas
 tvarkykles. Naudokite "ddm -p broadcom", kad pašalintumėte tvarkykles iš
 savo sistemos.</p>
 
@@ -52,14 +52,14 @@ savo sistemos.</p>
 		<p>Tai, kelių procesorių sistemose, kuriose vykdoma 32-bitų operacinė sistema,
 įdiegs PAE branduolį. Naudokite "ddm -p pae", kad pašalintumėte PAE
 branduolį iš savo sistemos. Turėkite omenyje, kad jūs negalite pašalinti
-branduolio, kuomet jūsų yra paleista į tą branduolį.</p>
+branduolio, kuomet jūsų sistema yra paleista į tą branduolį.</p>
 
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Tai pabandys pataisyti Bumblebee įdiegimą.</p>
 
 		<h2>Žurnalas</h2>
 		<h3>Failas: /var/log/ddm.log</h3>
-		<p>Prašome, pridėkite savo žurnalo failą, kuomet apie problemą skelbiate mūsų
+		<p>Prašome, pridėti savo žurnalo failą, kai skelbiate apie problemą mūsų
 forume: <a href="http://forums.solydxk.com"
 target="_blank">http://forums.solydxk.com</a></p>
     </div>
