Updated translation files

--- a/po/en/help.html
+++ b/po/en/help.html
@@ -36,7 +36,7 @@
 		<h3># ddm -i fixbumblebee</h3>
 		<p>This will try to fix a Bumblebee install.</p>
 
-		<h2>Log</h2>
+		<h2>Logging</h2>
 		<h3>File: /var/log/ddm.log</h3>
 		<p>Please, attach your log file when you post an issue on our forum: <a href="http://forums.solydxk.com" target="_blank">http://forums.solydxk.com</a></p>
     </div>
