--- a/po/translated/ar/help.html
+++ b/po/translated/ar/help.html
@@ -49,7 +49,7 @@
 		<h3># ddm -i fixbumblebee</h3>
 		<p>هذا سيحاول إصلاح تثبيت Bumblebee</p>
 
-		<h2>السّجل</h2>
+		<h2>Logging</h2>
 		<h3>الملف: /var/log/ddm.log</h3>
 		<p>يرجى إرفاق ملف السجل الخاص بك عند إضافة مشكلة على منتدانا: <a
 href="http://forums.solydxk.com"
