--- a/po/translated/ca/help.html
+++ b/po/translated/ca/help.html
@@ -57,7 +57,7 @@ executant en aquell moment. </p>
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Això intentarà esmenar una instal·lació de Bumblebee. </p>
 
-		<h2>Registre </h2>
+		<h2>Logging</h2>
 		<h3>Fitxer: /var/log/ddm.log</h3>
 		<p>Si us plau, adjunteu el vostre fitxer de registre quan informeu d'un
 incident al nostre fòrum <a href="http://forums.solydxk.com"
