--- a/po/translated/de/help.html
+++ b/po/translated/de/help.html
@@ -55,7 +55,7 @@ während er in Benutzung ist.</p>
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Dies wird die Reparatur einer Bumblebee-Installation versuchen.</p>
 
-		<h2>Log</h2>
+		<h2>Logging</h2>
 		<h3>Datei: /var/log/ddm.log</h3>
 		<p>Bitte fügen Sie die Logdatei bei, wenn Sie eine Frage in unserem Forum
 stellen: <a href="http://forums.solydxk.com"
