--- a/po/translated/es/help.html
+++ b/po/translated/es/help.html
@@ -55,7 +55,7 @@ sistema.</p>
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Ésto intentará reparar una instalación de Bumblebee.</p>
 
-		<h2>Log</h2>
+		<h2>Logging</h2>
 		<h3>Archivo: /var/log/ddm.log</h3>
 		<p>Por favor, adjunte su archivo de log cuando postee un inconveniente en
 nuestro foro: <a href="http://forums.solydxk.com"
