--- a/po/translated/fr/help.html
+++ b/po/translated/fr/help.html
@@ -57,7 +57,7 @@ cours d'utilisation.</p>
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Cela va tenter de réparer une installation par Bumblebee.</p>
 
-		<h2>Journal</h2>
+		<h2>Logging</h2>
 		<h3>Fichier: /var/log/ddm.log</h3>
 		<p>Merci de joindre un fichier de log lorsque vous postez une demande sur notre
 forum: <a href="http://forums.solydxk.com"
