--- a/po/translated/it/help.html
+++ b/po/translated/it/help.html
@@ -56,7 +56,7 @@ Broadcom. Per eliminare i driver dal sistema, eseguire in un terminale "ddm
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Procedendo verrà tentato il ripristino dell'installazione di Bumblebee</p>
 
-		<h2>Log</h2>
+		<h2>Logging</h2>
 		<h3>File: /var/log/ddm.log</h3>
 		<p>Si prega di allegare il log del processo per chiedere supporto sul forum: <a
 href="http://forums.solydxk.com"
