--- a/po/translated/ja/help.html
+++ b/po/translated/ja/help.html
@@ -43,7 +43,7 @@ broadcom" を使用してください。</p>
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Bumblebee インストールの修正を試みます。</p>
 
-		<h2>ログ</h2>
+		<h2>Logging</h2>
 		<h3>ファイル: /var/log/ddm.log</h3>
 		<p>フォーラムに問題を投稿する場合は、ログファイルを添付して下さい: <a href="http://forums.solydxk.com"
 target="_blank">http://forums.solydxk.com</a></p>
