--- a/po/translated/lt/help.html
+++ b/po/translated/lt/help.html
@@ -57,7 +57,7 @@ branduolio, kuomet jūsų sistema yra paleista į tą branduolį.</p>
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Tai pabandys pataisyti Bumblebee įdiegimą.</p>
 
-		<h2>Žurnalas</h2>
+		<h2>Logging</h2>
 		<h3>Failas: /var/log/ddm.log</h3>
 		<p>Prašome, pridėti savo žurnalo failą, kai skelbiate apie problemą mūsų
 forume: <a href="http://forums.solydxk.com"
