--- a/po/translated/nb/help.html
+++ b/po/translated/nb/help.html
@@ -54,7 +54,7 @@ du ikke kan fjerne kjernen når du har startet opp med denne.</p>
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Dette vil prøve å fikse Bumblebee-installasjonen.</p>
 
-		<h2>Logg</h2>
+		<h2>Logging</h2>
 		<h3>Fil: /var/log/ddm.log</h3>
 		<p>Vær snill å legge ved logg-filen når du poster om et problem i forumet vårt:
 <a href="http://forums.solydxk.com"
