--- a/po/translated/nl/help.html
+++ b/po/translated/nl/help.html
@@ -57,7 +57,7 @@ u momenteel in die kernel bent opgestart.</p>
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Dit zal uw Bumblebee installatie proberen te herstellen.</p>
 
-		<h2>Log</h2>
+		<h2>Logging</h2>
 		<h3>Bestand: /var/log/ddm.log</h3>
 		<p>Voeg uw log bestand toe wanneer u een probleem met DDM wilt posten op ons
 forum: <a href="http://forums.solydxk.com"
