--- a/po/translated/pl/help.html
+++ b/po/translated/pl/help.html
@@ -53,7 +53,7 @@ uruchomieniu.</p>
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Polecenie konfigurujące instalację Bumblebee.</p>
 
-		<h2>Log</h2>
+		<h2>Logging</h2>
 		<h3>Plik: /var/log/ddm.log</h3>
 		<p>Proszę dołączyć plik logu wysyłając raport o błędzie na <a
 href="http://forums.solydxk.com"
