--- a/po/translated/pt_PT/help.html
+++ b/po/translated/pt_PT/help.html
@@ -55,7 +55,7 @@ estando ele atualmente iniciado.</p>
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Isso irá tentar corrigir a instalação Bumblebee.</p>
 
-		<h2>Registo</h2>
+		<h2>Logging</h2>
 		<h3>Ficheiro: /var/log/ddm.log</h3>
 		<p>Por favor, anexar o ficheiro de registo quando você postar um problema no
 nosso fórum: <a href="http://forums.solydxk.com"
