--- a/po/translated/ru/help.html
+++ b/po/translated/ru/help.html
@@ -53,7 +53,7 @@ pae из вашей системы. Обратите внимание, что н
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Это может исправить Bumblebee.</p>
 
-		<h2>Журнал</h2>
+		<h2>Logging</h2>
 		<h3>File: /var/log/ddm.log</h3>
 		<p>Пожалуйста, прикрепите файл журнала, когда вы отправляете вопрос на нашем
 форуме: <a href="http://forums.solydxk.com"
