--- a/po/translated/sr/help.html
+++ b/po/translated/sr/help.html
@@ -50,7 +50,7 @@ broadcom“ да уклоните драјвере са система.</p>
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Ово покушава да среди „Bumblebee“ инсталацију.</p>
 
-		<h2>Дневник</h2>
+		<h2>Logging</h2>
 		<h3>Фајл: /var/log/ddm.log</h3>
 		<p>Приложите и фајл дневника када постављате проблем на форуму: <a
 href="http://forums.solydxk.com"
