--- a/po/translated/tr/help.html
+++ b/po/translated/tr/help.html
@@ -54,7 +54,7 @@ silemezsiniz.</p>
 		<h3># ddm -i fixbumblebee</h3>
 		<p>Bu Bumblebee kurulumunu onarmayı deneyecektir.</p>
 
-		<h2>Günlük</h2>
+		<h2>Logging</h2>
 		<h3>Dosya: /var/log/ddm.log</h3>
 		<p>Lütfen, bir sorun nedeniyle foruma mesaj gönderdiğinizde log dosyasını da
 ekleyiniz: <a href="http://forums.solydxk.com"
