--- a/po/translated/en_AU/help.html
+++ b/po/translated/en_AU/help.html
@@ -52,7 +52,7 @@ you cannot remove the kernel when you are currently booted into that kernel.</p>
 		<h3># ddm -i fixbumblebee</h3>
 		<p>This will try to fix a Bumblebee install.</p>
 
-		<h2>Log</h2>
+		<h2>Logging</h2>
 		<h3>File: /var/log/ddm.log</h3>
 		<p>Please, attach your log file when you post an issue on our forum: <a
 href="http://forums.solydxk.com"
